sua lai phan hien thi so lieu

--- a/index.html
+++ b/index.html
@@ -85,5 +85,28 @@
   <p class="numbermeaning">Happy clients</p>
 </div>
 </div>
+<div class="image">
+  <img src="15.jpg" alt="dove" width="320px" height="320px">
+  <img class="scenery" src="7.jpg" alt="coconut-tree"  width="320px" height="320px">
+  <img class="scenery" src="18.jpg" alt="flamingo"  width="320px" height="320px">
+  <div class="content">
+    <h2>EUPHORIA MODE</h2>
+    <p>How to start a round-the-world trip trip in a better way? It would have been silly to slow down the pace under the pretext of “saving energy” for the rest of the trip, wouldn’t it?</p>
+  </div>
+  </div>
+  <div class="box3">
+  <div class="rectangle"></div>
+  <div>
+    <h2 class="travel-delight">TRAVELING DELIGHTS</h2>
+    <p class="delight">Well, it was a little predictable, though! We had waited so long for this moment, we had dreamed of it so much. We were finally on our ” round the world tour “. It would just be strange not to be euphoric . So we listened to oureselves and visited China with this incredible energy we had at the beginning of the trip! 10 weeks in China and so many first experiences for us: First trip in a crowded metro with our backpacks, first couchsurfing, first night bus, first meal unidentified in the plate, first stomach issues… beautiful encounters, a beautiful proposal on the great wall of China</p>
+  </div>
+</div>
+<div class="box4">
+  <img class="picture8" src="8.jpg" width="841px" height="526px">
+  <div class="PERFECTLY-PLANNED-VACATION">
+    <h2 class="vacation">A TOUR IS A PERFECTLY PLANNED VACATION</h2>
+    <p class="round-the-world">How to start a round-the-world trip trip in a better way? It would have been silly to slow down the pace under the pretext of “saving energy” for the rest of the trip, wouldn’t it?</p>
+  </div>
+</div>
 </body>
 </html>
